WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
247056
WebGL crashes when GPUP DOM Rendering is enabled
https://bugs.webkit.org/show_bug.cgi?id=247056
Summary
WebGL crashes when GPUP DOM Rendering is enabled
Kimmo Kinnunen
Reported
2022-10-26 03:27:36 PDT
WebGL crashes when GPUP DOM Rendering is enabled
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-10-26 03:30:20 PDT
<
rdar://problem/101582758
>
Kimmo Kinnunen
Comment 2
2022-10-26 03:32:58 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/5806
EWS
Comment 3
2022-10-26 23:35:03 PDT
Committed
256051@main
(7f9455e083da): <
https://commits.webkit.org/256051@main
> Reviewed commits have been landed. Closing PR #5806 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug