WebGL crashes when GPUP DOM Rendering is enabled https://bugs.webkit.org/show_bug.cgi?id=247056 rdar://problem/101582758

Reviewed by Antti Koivisto.

When WebGL GPUP is enabled without UI-side compositing, WebGL
must use IOSurfaces in WebContent process. Ensure IOKit blocking
is turned on only when UI-side compositing is on.

* LayoutTests/webgl/webgl-and-dom-in-gpup-expected.html: Added.
* LayoutTests/webgl/webgl-and-dom-in-gpup.html: Added.
* Source/WebKit/WebProcess/WebPage/WebPage.cpp:
(WebKit::m_appHighlightsVisible):

Canonical link: https://commits.webkit.org/256051@main